--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         width: 100px;
         opacity: 1;
       }
-      #myFrame {
+      #myPlayer {
         display: none;
       }
     </style>
