--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
         color: white;
         font-size: 15px;
         font-family: Arial, sans-serif;
+        display: flex;
+        align-items: center;
+        flex-direction: column
       }
       .icon-container {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        max-width: 700px;
+        width: 700px;
       }
       h2 Text:first-child {
         color: white;
