--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 700px;
+        width: 70vw;
       }
       h2 Text:first-child {
         color: white;
@@ -47,6 +47,8 @@
       }
       #myPlayer {
         display: none;
+        width: 70vw;
+        padding-bottom: 42%;
       }
     </style>
   </head>
@@ -95,7 +97,7 @@
     <br>
     <br>
 
-    <video id="myPlayer" class="video-js vjs-default-skin" width="700" height="394" controls></video>
+    <video id="myPlayer" class="video-js vjs-default-skin" controls></video>
 
     <script>
       var selectedImage = null;
