--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       #myPlayer {
         display: none;
         width: 60vw;
-        padding-bottom: 36%;
+        height: 34vw;
       }
     </style>
   </head>
