--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         if (url) {
           player.src({
             src: url,
-            type: 'application/vnd.apple.mpegurl'
+            type: 'application/x-mpegURL'
           });
           player.play();
           document.getElementById("myPlayer").style.display = "block";
