--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
   <body>
 
     <div class="icon-container">
+      <a style="color:#33FF6E;" onclick="loadChannel('eppvjpkd.ss')">
+        <img src="" width="50" onclick="selectImage(this)">
+      </a>
+      &nbsp;
+      &nbsp;
       <a style="color:#33FF6E;" onclick="loadChannel('qkihgakk.ss')">
         <img src="" width="50" onclick="selectImage(this)">
       </a>
