--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
       }
       .video-js .vjs-control-bar {
         height: 0px;
+        font-size: 30px;
+      }
     </style>
   </head>
   <body>
