--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         height: 0px;
         font-size: 30px;
       }
+      .video-js .vjs-fullscreen-control {
+        font-size: 40px;
+      }
     </style>
   </head>
   <body>
