--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
       var baseUrl6 = '936';
       var baseUrl7 ='205';
       var player = videojs('myPlayer', {
-        fullscreenToggle: true
+        fullscreenToggle: true,
+        opacity: 0.4
       });
 
       function selectImage(img) {
