--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
         height: 0px;
         font-size: 30px;
       }
+      .vjs-fullscreen-control:fullscreen {
+        opacity: 0.4;
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+        z-index: 9999;
+      }
     </style>
   </head>
   <body>
