--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
       var baseUrl6 = '936';
       var baseUrl7 ='205';
       var player = videojs('myPlayer', {
-        fullscreenToggle: true,
-        opacity: 0.4
+        fullscreenToggle: true
       });
 
       function selectImage(img) {
