--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         font-size: 30px;
       }
       .vjs-fullscreen-control:fullscreen {
+        height: 40px;
         opacity: 0.4;
         position: fixed;
         bottom: 10px;
