--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         height: 0px;
         font-size: 30px;
       }
+      .vjs-fullscreen-control:fullscreen {
+        opacity: 0.4;
+      }
     </style>
   </head>
   <body>
