--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
         height: 0px;
         font-size: 30px;
       }
-      .vjs-fullscreen-control:fullscreen {
+      #myPlayer .vjs-fullscreen-control:fullscreen {
         opacity: 0.2;
+      }
+      #myPlayer .vjs-fullscreen-control {
+        opacity: 0.0;
       }
     </style>
   </head>
