--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         font-size: 30px;
         opacity: 0.3;
       }
+      .vjs-fullscreen-control:fullscreen {  
+        opacity: 0.4; 
+      }
     </style>
   </head>
   <body>
