--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         font-size: 30px;
         opacity: 0.3;
       }
-      .vjs-fullscreen-control:fullscreen {  
+      .player.video-js .vjs-fullscreen-control {  
         opacity: 0.4; 
       }
     </style>
