--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
       .video-js .vjs-control-bar {
         height: 0px;
         font-size: 30px;
-        opacity: 0.3;
       }
-      .player.video-js .vjs-fullscreen-control {  
+      #player .video-js .vjs-fullscreen-control {  
         opacity: 0.4; 
       }
     </style>
