--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         height: 0px;
         font-size: 30px;
       }
-      .video-js.myPlayer .myPlayer-fullscreen-toggle {
+      .myPlayer-fullscreen-toggle {
         opacity: 0.4;
       }
     </style>
