--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         display: none;
       }
       .video-js .vjs-control-bar {
-        height: 0px;
+        /*height: 0px;*/
         font-size: 30px;
       }
     </style>
