--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
     </div>
 
     <h2>
+      <a class="link" href="https://berno22.github.io/">All Media</a>
+      <br>
       <Text id="closeFrame" onclick="closeFrame()">Live</Text>
       <Text id="bullet"> &bull;</Text>
     </h2>
