--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         width: 80px;
         opacity: 1;
       }
+      .link {
+        color: white;
+        text-decoration: none;
+        line-height: 1.8;
+      }
       #myPlayer {
         display: none;
         width: 60vw;
