--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         color: white;
         text-decoration: none;
         line-height: 1.8;
+        opacity: 0.4;
+      }
+      .my-heading {
+        text-align: justify;
       }
       #myPlayer {
         display: none;
@@ -107,7 +111,7 @@
       </a>
     </div>
 
-    <h2>
+    <h2 class="my-heading">
       <a class="link" href="https://berno22.github.io/">All Media</a>
       <br>
       <Text id="closeFrame" onclick="closeFrame()">Live</Text>
