--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         opacity: 0.4;
       }
       .my-heading {
-        text-align: justify;
+        text-align: center;
       }
       #myPlayer {
         display: none;
