--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       #closeFrame {
         display: none;
       }
-      .video-js .vjs-control-bar {
+      .vjs-theme-city .vjs-control-bar {
         /*height: 0px;*/
         font-size: 30px;
       }
@@ -118,7 +118,7 @@
       <Text id="bullet"> &bull;</Text>
     </h2>
 
-    <video id="myPlayer" class="video-js" controls></video>
+    <video id="myPlayer" class="video-js vjs-theme-city" controls></video>
 
     <script>
       var selectedImage = null;
