--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       var baseUrl5 = '@gmail.com';
       var baseUrl6 = '936';
       var baseUrl7 ='205';
-      var player = videojs('myPlayer', {
+      var player = video-js vjs-theme-city('myPlayer', {
         fullscreenToggle: true
       });
 
