--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <link href="https://vjs.zencdn.net/7.15.4/video-js.css" rel="stylesheet" />
-    <link href="https://github.com/videojs/themes/blob/master/city/index.css" rel="stylesheet" />
     <script src="https://vjs.zencdn.net/7.15.4/video.min.js"></script>
     <style>
       body {
@@ -63,7 +62,7 @@
       #closeFrame {
         display: none;
       }
-      .vjs-theme-city .vjs-control-bar {
+      .video-js .vjs-control-bar {
         /*height: 0px;*/
         font-size: 30px;
       }
@@ -119,7 +118,7 @@
       <Text id="bullet"> &bull;</Text>
     </h2>
 
-    <video id="myPlayer" class="video-js vjs-theme-city" controls></video>
+    <video id="myPlayer" class="video-js" controls></video>
 
     <script>
       var selectedImage = null;
