--- a/index.html
+++ b/index.html
@@ -45,15 +45,6 @@
         width: 80px;
         opacity: 1;
       }
-      .link {
-        color: white;
-        text-decoration: none;
-        line-height: 1.8;
-        opacity: 0.4;
-      }
-      .my-heading {
-        text-align: center;
-      }
       #myPlayer {
         display: none;
         width: 60vw;
@@ -111,10 +102,8 @@
       </a>
     </div>
 
-    <h2 class="my-heading">
-      <a class="link" href="https://berno22.github.io/">All Media</a>
-      <br>
-      <Text id="closeFrame" onclick="closeFrame()">  Live</Text>
+    <h2>
+      <Text id="closeFrame" onclick="closeFrame()">Live</Text>
       <Text id="bullet"> &bull;</Text>
     </h2>
 
@@ -127,7 +116,7 @@
       var baseUrl5 = '@gmail.com';
       var baseUrl6 = '936';
       var baseUrl7 ='205';
-      var player = video-js('myPlayer', {
+      var player = videojs('myPlayer', {
         fullscreenToggle: true
       });
 
