--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
         width: 80px;
         opacity: 1;
       }
+      .link {
+        color: white;
+        text-decoration: none;
+        line-height: 1.8;
+        opacity: 0.4;
+      }
+      .my-heading {
+        text-align: center;
+      }
       #myPlayer {
         display: none;
         width: 60vw;
@@ -102,8 +111,10 @@
       </a>
     </div>
 
-    <h2>
-      <Text id="closeFrame" onclick="closeFrame()">Live</Text>
+    <h2 class="my-heading">
+      <a class="link" href="https://berno22.github.io/">All Media</a>
+      <br>
+      <Text id="closeFrame" onclick="closeFrame()">  Live</Text>
       <Text id="bullet"> &bull;</Text>
     </h2>
 
