--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
       var baseUrl5 = '@gmail.com';
       var baseUrl6 = '936';
       var baseUrl7 ='205';
+      var player = videojs('myPlayer');
 
       function selectImage(img) {
         if (selectedImage) {
