--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         display: none;
       }
       .video-js .vjs-control-bar {
-        /*height: 0px;*/
-        font-size: 20px;
+        height: 0px;
+        /*font-size: 20px;*/
       }
     </style>
   </head>
