--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       }
 
       function loadChannel(channel) {
-        var url = 'https://tvnow.' + 'best/api/stream/' + baseUrl3 + baseUrl4 + baseUrl5 + '/' + baseUrl6 + baseUrl7 + '/livetv.epg/' + channel + '.m3u8';
+        var url = 'https://starlite.' + 'best/api/stream/' + baseUrl3 + baseUrl4 + baseUrl5 + '/' + baseUrl6 + baseUrl7 + '/livetv.epg/' + channel + '.m3u8';
         if (url) {
           player.src({
             src: url,
